code quality improvements; pull more data from tmdb

--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -32,6 +32,12 @@ body {
   position: relative;
 }
 
+input,
+select,
+button {
+  font-family: 'Roboto', sans-serif;
+}
+
 h1,
 h2 {
   font-family: Pacifico, sans-serif;
