--- a/app/src/styles/_nice.scss
+++ b/app/src/styles/_nice.scss
@@ -1,4 +1,4 @@
-@mixin gradient-button($gradient, $border-width) {
+@mixin gradient-border($gradient, $border-width) {
   background: black;
   background-clip: padding-box;
 
