add authN via JWT; re-organize code
- server: rename endpoints
- server: add authentication
- server: use authentication-based endpoints
- server: add hash command for hashing passwords for config
- server: move poster download back into media provider
- server: rename dbutils func names to be more speaking
- server: handlers: remove ugly "addXYZ" pattern, use "useXYZ" pattern and name things what they are: controllers
- server: use struct for config backbones
- server: fix globbing for posters
- app: use new authentication-backend
- app: remove pinia as store (currently we need no store)
- app: remove userselectionview
- app: use cookie to store current user
- app: improve pending-dependencies patterns for environment, api-client, current user
- app: misuse provider pattern in `ApiClientProvider` to ensure api-client is ready in components
- app: add constants for route names

--- a/app/src/index.scss
+++ b/app/src/index.scss
@@ -38,6 +38,15 @@ button {
   font-family: 'Roboto', sans-serif;
 }
 
+input,
+select {
+  background: transparent;
+  border: 0;
+  outline: 0;
+
+  color: white;
+}
+
 h1,
 h2 {
   font-family: Pacifico, sans-serif;
