--- a/app/src/assets/styles/index.scss
+++ b/app/src/assets/styles/index.scss
@@ -7,7 +7,8 @@
 
 html,
 body,
-#app {
+#app,
+#storybook-root {
   width: 100%;
   height: 100%;
 
@@ -64,4 +65,9 @@ h1 {
 
 h2 {
   font-size: 2.5rem;
+}
+
+input:-webkit-autofill {
+  border-radius: 0.75rem;
+  -webkit-box-shadow: 0 0 0 30px black inset !important;
 }
